Bug 392152: notify front-end when clearing DM history, so that it can clear the active list, r=sdwilsh